--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,7 @@ development:
   encoding: unicode
   database: albanydfc_app_development
   pool: 5
-  username: postgres
-  password: zen
+  password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
