--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,8 @@ development:
   encoding: unicode
   database: albanydfc_app_development
   pool: 5  
-  password:
+  username: postgres
+  password: zen
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
